--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <li><a href="#about" class="nav-link">About Us</a></li>
               <li><a href="#services" class="nav-link">Sectors</a></li>
               <li><a href="#projects" class="nav-link">Projects</a></li>
-              <li><a href="#media" class="nav-link">Media</a></li>
+              <li><a href="#media" class="nav-link">Video</a></li>
               <li><a href="#contact" class="nav-link">Contact Us</a></li>
             </ul>
           </nav>
@@ -259,7 +259,7 @@
             <li><a href="#about" class="nav-link">About Us</a></li>
             <li><a href="#services" class="nav-link">Sectors</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
-            <li><a href="#media" class="nav-link">Media</a></li>
+            <li><a href="#media" class="nav-link">Video</a></li>
             <li><a href="#contact" class="nav-link">Contact Us</a></li>
           </ul>
           <button class="cta-button mobile-cta" id="requestCallbackBtnMobile">
@@ -364,8 +364,8 @@
                 </div>
                 <div class="founder-content">
                   <div class="founder-name-title">
-                    <h3 class="founder-name">Gummi Ram Reddy</h3>
-                    <p class="founder-title">| Founder & CEO</p>
+                    <h3 class="founder-name">Shri Gummi Ram Reddy</h3>
+                    <p class="founder-title">| Chief Managing Director</p>
                   </div>
                   <p class="founder-description">
                     Ram is a successful entrepreneur, philanthropist, and the
@@ -536,7 +536,7 @@
         <h2 class="video-media-heading">Video and Media</h2>
         <div class="video-media-content">
           <!-- Media Article -->
-          <div class="media-article-card">
+          <!-- <div class="media-article-card">
             <a
               href="https://example.com/article"
               target="_blank"
@@ -578,12 +578,12 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
 
           <!-- Video Thumbnail -->
           <div class="video-thumbnail-card">
             <a
-              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              href="https://www.youtube.com/watch?v=1JoIr_hX710"
               target="_blank"
               rel="noopener noreferrer"
               class="video-thumbnail-link"
