--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="contact-strip">
       <div class="contact-strip-container">
         <div class="contact-info">
-          <a href="tel:+1234567890" class="contact-item">
+          <a href="tel:+91 72079 44949" class="contact-item">
             <svg
               width="16"
               height="16"
@@ -187,7 +187,7 @@
                 stroke-linejoin="round"
               />
             </svg>
-            <span>+1 (234) 567-890</span>
+            <span>+91 72079 44949</span>
           </a>
           <a href="mailto:info@arkinfra.com" class="contact-item">
             <svg
@@ -368,7 +368,7 @@
                     <p class="founder-title">| Chief Managing Director</p>
                   </div>
                   <p class="founder-description">
-                    Ram is a successful entrepreneur, philanthropist, and the
+                    Mr. G ram reddy is a successful entrepreneur, philanthropist, and the
                     current CMD of Ark Group. With an impressive 36+ years of
                     career, he is a respected and influential leader within his
                     organization, industry, and community.
@@ -531,7 +531,7 @@
     </section>
 
     <!-- Video and Media Section -->
-    <section id="video-media" class="video-media-section">
+    <section id="media" class="video-media-section">
       <div class="video-media-container">
         <h2 class="video-media-heading">Video and Media</h2>
         <div class="video-media-content">
@@ -902,7 +902,7 @@
               <h4 class="footer-social-title">Follow Us</h4>
               <div class="social-links">
                 <a
-                  href="https://facebook.com"
+                  href="https://www.facebook.com/arkgroupindia"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="social-link"
@@ -921,7 +921,7 @@
                   </svg>
                 </a>
                 <a
-                  href="https://instagram.com"
+                  href="https://www.instagram.com/arkgroupindia/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="social-link"
@@ -939,7 +939,7 @@
                     />
                   </svg>
                 </a>
-                <a
+                <!-- <a
                   href="https://twitter.com"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -956,6 +956,27 @@
                     <path
                       d="M23 3C22.0424 3.67548 20.9821 4.19211 19.86 4.53C19.2577 3.83751 18.4573 3.34669 17.567 3.12393C16.6767 2.90116 15.7395 2.95718 14.8821 3.28446C14.0247 3.61174 13.2884 4.1944 12.773 4.95372C12.2575 5.71303 11.9877 6.61232 12 7.53V8.53C10.2426 8.57557 8.50127 8.18581 6.93101 7.39545C5.36074 6.60508 4.01032 5.43864 3 4C3 4 -1 13 8 17C5.94053 18.398 3.48716 19.0989 1 19C10 24 21 19 21 7.5C20.9991 7.22145 20.9723 6.94359 20.92 6.67C21.9406 5.66349 22.6608 4.39271 23 3Z"
                     />
+                  </svg>
+                </a> -->
+                <a
+                  href="https://www.linkedin.com/company/arkgroupindia/?viewAsMember=true"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="social-link"
+                  aria-label="LinkedIn"
+                >
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+                    />
+                    <rect x="2" y="9" width="4" height="12" />
+                    <circle cx="4" cy="4" r="2" />
                   </svg>
                 </a>
               </div>
