--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <div class="founder-content">
                   <div class="founder-name-title">
                     <h3 class="founder-name">Shri Gummi Ram Reddy</h3>
-                    <p class="founder-title">| Chief Managing Director</p>
+                    <p class="founder-title">CMD - Ark Group & President - CREDAI National</p>
                   </div>
                   <p class="founder-description">
                     Mr. G ram reddy is a successful entrepreneur, philanthropist, and the
