--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </svg>
             <span>+91 72079 44949</span>
           </a>
-          <a href="mailto:info@arkinfra.com" class="contact-item">
+          <a href="mailto:info@arkgroup.in" class="contact-item">
             <svg
               width="16"
               height="16"
@@ -212,7 +212,7 @@
                 stroke-linejoin="round"
               />
             </svg>
-            <span>info@arkinfra.com</span>
+            <span>info@arkgroup.in</span>
           </a>
         </div>
       </div>
@@ -368,7 +368,7 @@
                     <p class="founder-title">CMD - Ark Group & President - CREDAI National</p>
                   </div>
                   <p class="founder-description">
-                    Mr. G ram reddy is a successful entrepreneur, philanthropist, and the
+                    Mr. G Ram Reddy is a successful entrepreneur, philanthropist, and the
                     current CMD of Ark Group. With an impressive 36+ years of
                     career, he is a respected and influential leader within his
                     organization, industry, and community.
@@ -869,7 +869,7 @@
                 />
               </svg>
 
-              <a href="mailto:info@arkinfra.com">info@arkinfra.com</a>
+              <a href="mailto:info@arkgroup.in">info@arkgroup.in</a>
             </div>
           </div>
 
